// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`converter function Advanced conversion test 1`] = `
"query ($searchPattern: String ="%", $safeMaxPrice: Number = 10000, $safeMinBedrooms: Number = 3, $safeMinBathrooms: Number = 2) {
    uiapi {
        query {
            Property__c (first: 3, where: {or: [{Name: {eq: $searchPattern}}, {or: [{City__c: {eq: $searchPattern}}, {and: [{Tags__c: {eq: $searchPattern}}, {and: [{Price__c: {lte: $safeMaxPrice}}, {and: [{Beds__c: {gte: $safeMinBedrooms}}, {Baths__c: {gte: $safeMinBathrooms}}]}]}]}]}]}, orderBy: {Price__c: {order: DESC}}) {
                edges {
                    node {
                        Id
                        Name {
                            value
                        }
                        Address__c {
                            value
                        }
                        City__c {
                            value
                        }
                        State__c {
                            value
                        }
                        Description__c {
                            value
                        }
                        Price__c {
                            value
                        }
                        Baths__c {
                            value
                        }
                        Beds__c {
                            value
                        }
                        Thumbnail__c {
                            value
                        }
                        Location__Latitude__s {
                            value
                        }
                        Location__Longitude__s {
                            value
                        }
                    }
                }
            }
        }
    }
}"
`;

exports[`converter function Query with var select Id, Name from Account where (Id = ':recordId' and Name like ':name') or BillingCountry like ':name' limit 3 1`] = `
"query ($recordId: ID!, $name: String = "%", $country: String) {
    uiapi {
        query {
            Account (first: 3, where: {and: [{Id: {eq: $recordId}}, {or: [{Name: {like: $name}}, {BillingCountry: {like: $name}}]}]}) {
                edges {
                    node {
                        Id
                        Name {
                            value
                        }
                    }
                }
            }
        }
    }
}"
`;

exports[`converter function Simple Query: select Id, Name, Owner.Name, (select Id from Opportunities) from Account where Name like '%N' limit 3 1`] = `
"query {
    uiapi {
        query {
            Account (first: 3, where: {Name: {like: "%N"}}) {
                edges {
                    node {
                        Id
                        Name {
                            value
                        }
                        Owner {
                            Name {
                                value
                            }
                        }
                        Opportunities {
                            edges {
                                node {
                                    Id
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}"
`;
